# bug

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
editor/: bug.vim
examples/: assign.bug  counter.bug  fib.bug  hello.bug  main.bug  main.vex  max.bug  sum.bug
src/: bytecode.rs  cli.rs  core.rs  frame.rs  function.rs  lib.rs  main.rs  object.rs  pool.rs  program.rs  stack.rs  std.rs  stdlib.rs  utils.rs
src/bugc/: ast.rs  checker.rs  codegenerator.rs  highlighter.rs  lexer.rs  mod.rs  parser.rs  span.rs  token.rs  utils.rs
src/bugc/analysis/: context.rs  errorhandler.rs  mod.rs  scope.rs
src/bugc/checker/: checker.rs
src/bugc/codegeneration/: mod.rs
src/bugc/frontend/: lexer.rs  mod.rs  parser.rs  token.rs
src/bugc/generator/: mod.rs
src/bvm/: core.rs  engine.rs  frame.rs  function.rs  mod.rs  stack.rs
src/compiler/: ast.rs  codegen.rs  main.rs  mod.rs  token.rs
src/compiler/analysis/: context.rs  errorhandler.rs  metascope.rs  mod.rs
src/compiler/lexer/: mod.rs
src/compiler/parser/: mod.rs
src/vm/: core.rs  frame.rs  mod.rs  stack.rs
