[package]
name = "bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.202", features = ["derive"] }

[[bin]]
name = "bugc"
path = "src/bugc/mod.rs"

[[bin]]
name = "bvm"
path = "src/bvm/mod.rs"
